优化 jrebel